--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body>
 	<!-- As a heading -->
 	<nav class="navbar navbar-light bg-secondary">
-		<span class="navbar-brand mb-0 h1">Covid-19 Estimator</span>
+		<span class="title navbar-brand mb-0 h1">Covid-19 Estimator</span>
 		<form class="form-inline">
 		<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 		<button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
